--- a/index.webc
+++ b/index.webc
@@ -6,10 +6,11 @@
 		<meta name="description" content="">
 		<title></title>
 		<style @raw="getCSS(page.url)" webc:keep></style>
+    <style>.argle {font-size:20px;}</style>
 	</head>
 	<body>
     <h1>Button Demo</h1>
-    <cfpb-button>Hi there</cfpb-button>
+    <cfpb-button class="argle">Hi there</cfpb-button>
     <cfpb-button @type=secondary>Again</cfpb-button>
     <cfpb-button @type=disabled></cfpb-button>
 	</body>
